@@ -3,6 +3,9 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2016-04-25 ede, Giuseppe
+  * featreq 422: wfs layer, add SRIDStyle using loading crs's epsg id
+
 2016-04-15 bertazza <bertazza@gmail>
   * Handling of .aux.xml files associated to tiff files changed: now if the
     .aux.xml file exists, the statistics are added to it, instead of just
